fix: critical migration and TypeScript quality issues
MIGRATION FIXES:
- Remove duplicate security RLS policy migration (20251208005149)
- Remove redundant total_tokens column addition (20251206154705)
- Fix duplicate system_prompts table creation by converting to update migration
- Ensure clean, sequential migration history to prevent deployment failures

TYPESCRIPT QUALITY IMPROVEMENTS:
- Remove all @ts-nocheck comments from serverless functions
- Add proper Deno TypeScript configuration (deno.jsonc, global.d.ts)
- Install @deno/types for proper type checking
- Fix type errors and enable full TypeScript analysis
- Restore compile-time error detection and IDE support

CODE QUALITY:
- Fix WorkerTask property name mismatch (description → instruction)
- Standardize createSupabaseClient usage across functions
- Add proper type declarations for Deno runtime
- Maintain type safety while supporting Deno environment

DATABASE INTEGRITY:
- Eliminate risk of duplicate operations causing migration failures
- Prevent inconsistent database states across environments
- Ensure production-ready migration sequence

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,15 @@
       ]
     },
     "allowImportingTsExtensions": true,
-    "noEmit": true
-  }
+    "noEmit": true,
+    "downlevelIteration": true
+  },
+  "exclude": [
+    "dist",
+    "node_modules"
+  ],
+  "include": [
+    "**/*",
+    "supabase/functions/**/*"
+  ]
 }
