--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
+    "@deno/types": "^0.0.1",
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.19.2",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
