--- a/deno.jsonc
+++ b/deno.jsonc
@@ -18,6 +18,7 @@
     "noUncheckedIndexedAccess": true
   },
   "imports": {
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.7.1"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.7.1",
+    "@std/assert": "https://deno.land/std@0.208.0/assert/mod.ts"
   }
 }
