feat: add comprehensive type checking for runtime safety
- Add npm scripts for Deno and frontend type checking
- Create standalone type-check.sh script with graceful Deno handling
- Update tsconfig.json to exclude Deno functions from frontend checks
- Integrate type checking into test runner script
- Provide clear instructions for Deno installation when missing

Scripts available:
- npm run type-check:frontend (TypeScript for React/frontend)
- npm run type-check:deno (Deno for Edge Functions)
- npm run type-check:all (both checks)
- ./type-check.sh (comprehensive script with output formatting)

--- a/supabase/functions/deno.jsonc
+++ b/supabase/functions/deno.jsonc
@@ -1,15 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["deno.ns", "ES2022", "DOM", "DOM.Iterable", "WebWorker"],
-    "types": ["https://deno.land/x/types/deno.d.ts"],
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "allowJs": true,
-    "noEmit": true,
-    "skipLibCheck": true,
+    "lib": [
+      "deno.ns",
+      "ES2022",
+      "DOM",
+      "DOM.Iterable",
+      "WebWorker"
+    ],
     "strict": true,
     "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true,
