--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
+    "type-check:deno": "deno check supabase/functions/**/*.ts 2>/dev/null || echo '⚠️  Deno not installed. Install with: curl -fsSL https://deno.land/install.sh | sh'",
+    "type-check:frontend": "tsc --noEmit",
+    "type-check:all": "npm run type-check:frontend && npm run type-check:deno",
+    "type-check:script": "./type-check.sh"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.2",
