feat: Add audit-orchestrator to config with JWT verification enabled
- Added audit-orchestrator function configuration
- Set verify_jwt = true for frontend-facing audit orchestration

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -10,6 +10,9 @@ verify_jwt = true
 [functions.audit-dispatcher]
 verify_jwt = true
 
+[functions.audit-orchestrator]
+verify_jwt = true
+
 [functions.github-oauth-start]
 verify_jwt = true
 
