fix: Set audit-orchestrator verify_jwt to false
- audit-orchestrator is called internally by audit-dispatcher
- Should not require JWT verification since it's an internal function call
- Fixes 401 Unauthorized errors in the legacy audit flow

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -10,8 +10,9 @@ verify_jwt = true
 [functions.audit-dispatcher]
 verify_jwt = true
 
+# Internal orchestration functions - DISABLE JWT (only called by other edge functions)
 [functions.audit-orchestrator]
-verify_jwt = true
+verify_jwt = false
 
 [functions.github-oauth-start]
 verify_jwt = true
