Implement instant job processing using environment variables
- Update audit-job-submit to trigger processor immediately after job insertion
- Uses SUPABASE_URL and SUPABASE_SERVICE_ROLE_KEY from Supabase secrets (no hardcoded keys)
- Remove hardcoded key requirement from SQL migration
- Database trigger now optional backup only
- Jobs process instantly instead of waiting for cron (1-2 min delay)

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -7,11 +7,10 @@ verify_jwt = true
 [functions.audit-runner]
 verify_jwt = true
 
-[functions.audit-dispatcher]
+[functions.audit-job-submit]
 verify_jwt = true
 
-# Internal orchestration functions - DISABLE JWT (only called by other edge functions)
-[functions.audit-orchestrator]
+[functions.audit-job-processor]
 verify_jwt = false
 
 [functions.github-oauth-start]
