Add job recovery system and improve busy-period handling
- Enhanced audit-job-submit with retry logic and exponential backoff
- Added job-recovery function for manual stuck job cleanup
- Improved error handling for busy periods
- Added small delay to batch rapid submissions

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -13,6 +13,9 @@ verify_jwt = true
 [functions.audit-job-processor]
 verify_jwt = false
 
+[functions.job-recovery]
+verify_jwt = true
+
 [functions.github-oauth-start]
 verify_jwt = true
 
