cleanup: remove dead audit-runner functions and fix overlapping orchestrators
- Remove entire supabase/functions/audit-runner/ directory (8 files)
- Remove audit-runner config from supabase/config.toml
- Clean up deprecated AuditService methods (executeAudit, planAudit, runAuditTask)
- Remove tests for non-existent audit-dispatcher and audit-orchestrator endpoints
- Fix type-check:deno script to show actual errors instead of silencing them
- Improve error handling in DeleteConfirmModal with user feedback

Eliminates confusion from multiple overlapping orchestrator functions and
removes unused code paths. Architecture now has clear audit flow:
audit-job-submit → audit-job-processor → audit-coordinator

Tests now only validate existing, functional endpoints.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "type-check:deno": "deno check supabase/functions/**/*.ts 2>/dev/null || echo '⚠️  Deno not installed. Install with: curl -fsSL https://deno.land/install.sh | sh'",
+    "type-check:deno": "command -v deno >/dev/null 2>&1 && deno check supabase/functions/**/*.ts || echo '⚠️  Deno not installed. Install with: curl -fsSL https://deno.land/install.sh | sh'",
     "type-check:frontend": "tsc --noEmit",
     "type-check:all": "npm run type-check:frontend && npm run type-check:deno",
     "type-check:script": "./type-check.sh"
