Comprehensive audit system updates
- Enhanced audit orchestrator with improved data management
- Added useAuditData hook for centralized audit state management
- Updated audit service with better error handling and API integration
- Improved audit flow and report dashboard components
- Added new stores for state management
- Updated package dependencies

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lovable-tagger": "^1.1.11",
     "lucide-react": "^0.555.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@deno/types": "^0.0.1",
