--- a/supabase/functions/deno.jsonc
+++ b/supabase/functions/deno.jsonc
@@ -17,6 +17,7 @@
     "allowImportingTsExtensions": true
   },
   "imports": {
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.7.1"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.7.1",
+    "@std/": "https://deno.land/std@0.168.0/"
   }
 }
